# ceraph

./: .gitignore  CMakeLists.txt  README.md  shortlist.txt  verify_llvm
generators/: lexer.l  parser.y
src/: ast.cpp  ast.hpp  ceraph_fwd.hpp  cmp_ops.hpp  codegen.cpp  codegen.hpp  main.cpp  operator.cpp  operator.hpp  parser_types.hpp  scope.cpp  scope.hpp  sema.cpp  sema.hpp  type.cpp  type.hpp  util.hpp
tests/run/: arrays.ce  basics.ce  pointers.ce  run_test_defs.c  run_test_header.he  run_tests
tests/verify/: arrays.ce  basics.ce  pointers.ce  structs.ce
